pkg/api/testdata/update-group/ingresses.yaml
# Ingress for hub domain in the default namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-3056690829-713459761-hub
  namespace: default
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIGateway
      name: gateway
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    hub.traefik.io/access-control-policy: "hub-api-management"
    hub.traefik.io/access-control-policy-groups: "suppliers"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: tunnel-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "default-gateway-3056690829-stripprefix@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: brave-lion-123.hub-traefik.io
      http:
        paths:
          - path: /petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
          - path: /stores/petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
  tls:
    - secretName: hub-certificate
      hosts:
        - brave-lion-123.hub-traefik.io

---
# Ingress for custom domains in the default namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-3056690829-713459761
  namespace: default
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIGateway
      name: gateway
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    hub.traefik.io/access-control-policy: "hub-api-management"
    hub.traefik.io/access-control-policy-groups: "suppliers"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: api-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "default-gateway-3056690829-stripprefix@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: api.hello.example.com
      http:
        paths:
          - path: /petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
          - path: /stores/petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
    - host: api.welcome.example.com
      http:
        paths:
          - path: /petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
          - path: /stores/petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
    - host: api.new.example.com
      http:
        paths:
          - path: /petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
          - path: /stores/petstore
            pathType: Prefix
            backend:
              service:
                name: petstore-svc
                port:
                  number: 8080
  tls:
    - secretName: hub-certificate-custom-domains-3056690829
      hosts:
        - api.hello.example.com
        - api.welcome.example.com
        - api.new.example.com

---
# Ingress for hub domain in the books namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-3056690829-713459761-hub
  namespace: books
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIGateway
      name: gateway
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    hub.traefik.io/access-control-policy: "hub-api-management"
    hub.traefik.io/access-control-policy-groups: "suppliers"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: tunnel-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "books-gateway-3056690829-stripprefix@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: brave-lion-123.hub-traefik.io
      http:
        paths:
          - path: /stores/bookstore
            pathType: Prefix
            backend:
              service:
                name: bookstore-svc
                port:
                  number: 443
  tls:
    - secretName: hub-certificate
      hosts:
        - brave-lion-123.hub-traefik.io

---
# Ingress for custom domains in the books namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-3056690829-713459761
  namespace: books
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIGateway
      name: gateway
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    hub.traefik.io/access-control-policy: "hub-api-management"
    hub.traefik.io/access-control-policy-groups: "suppliers"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: api-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "books-gateway-3056690829-stripprefix@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: api.hello.example.com
      http:
        paths:
          - path: /stores/bookstore
            pathType: Prefix
            backend:
              service:
                name: bookstore-svc
                port:
                  number: 443
    - host: api.welcome.example.com
      http:
        paths:
          - path: /stores/bookstore
            pathType: Prefix
            backend:
              service:
                name: bookstore-svc
                port:
                  number: 443
    - host: api.new.example.com
      http:
        paths:
          - path: /stores/bookstore
            pathType: Prefix
            backend:
              service:
                name: bookstore-svc
                port:
                  number: 443
  tls:
    - secretName: hub-certificate-custom-domains-3056690829
      hosts:
        - api.hello.example.com
        - api.welcome.example.com
        - api.new.example.com
