pkg/api/testdata/update-group/want.middlewares.yaml
# Middleware in the default namespace.
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: modified-gateway-713459761-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /stores/petstore
      - /petstore

---
# Middleware in the books namespace.
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: modified-gateway-713459761-stripprefix
  namespace: books
spec:
  stripPrefix:
    prefixes:
      - /stores/bookstore
